--- a/CSS/Personajes.css
+++ b/CSS/Personajes.css
@@ -1,5 +1,5 @@
 .Personajes {
-  margin: 80px 20px 40px 15px;/*top, right, bottom, left*/
+  margin: center center;/*top, right, bottom, left*/
 }
 
 .containerpersonajes {
