--- a/CSS/Trama.css
+++ b/CSS/Trama.css
@@ -1,5 +1,5 @@
 .Trama {
-    margin: 80px 25px 40px 20px;/*top, right, bottom, left*/
+    margin: center;/*top, right, bottom, left*/
   }
 .parrafos
 {
@@ -14,8 +14,12 @@
     margin-bottom: 20px; /* Espacio entre la imagen y el párrafo */
 }
 .letra{
-    font-size: 30px;
+    font-size: 20px;
     font-family: 'Bubblegum Sans';
+
+}
+@media  screen and (max-width: 540px) {
+    font-size: 12px;
 }
 .img01 {
     width: 800px;
