--- a/CSS/Footer.css
+++ b/CSS/Footer.css
@@ -1,5 +1,10 @@
-.olas{
-    width: 30%;
-    height: 10px;
-   opacity: 10%;
+footer {
+    
+}
+.Pie{
+    border-color: black;
+    background-image: url("/CSS/Imagenes/FondodeBikiniUpscaledCut.png");
+    width: 200px;
+    height: 200px;
+
 }
