--- a/CSS/Trama.css
+++ b/CSS/Trama.css
@@ -1,25 +1,21 @@
 .Trama {
-    margin: center;/*top, right, bottom, left*/
+    margin: center center;/*top, right, bottom, left*/
   }
 .parrafos
 {
     columns: 200px 2;
     column-gap: 100px;
-    padding: 25px;
+    padding: 20px;
     text-align: justify;
 }
 .img-container {
     display: flex;
     justify-content: center;
-    margin-bottom: 20px; /* Espacio entre la imagen y el párrafo */
 }
-.letra{
-    font-size: 20px;
-    font-family: 'Bubblegum Sans';
 
-}
-@media  screen and (max-width: 540px) {
-    font-size: 12px;
+#letra{
+    font-size: 30px;
+    font-family: 'Bubblegum Sans';
 }
 .img01 {
     width: 800px;
@@ -28,12 +24,12 @@
     display: block;
     margin-left: auto;
     margin-right: auto;
+    animation: agua 6s infinite ease-in-out;
 }
 .centrado {
 text-align:center;
 }
-.bordes {
-  
+.bordes { 
     border: 10px solid #B2AFAF;
     background-color:  rgba(79, 209, 240, 0.6);
     display: inline-flex;
@@ -54,4 +50,54 @@ text-align:center;
 }
 #texto > .parrafos > p:nth-child(2) {
     font-size: normal; /* Tamaño de fuente normal */
+}
+@keyframes agua {
+    0% {
+      transform: rotate(-3deg);
+    }
+    25% {
+      transform: rotate(0deg);
+    }
+    50% {
+      transform: rotate(3deg);
+    }
+    75% {
+        transform: rotate(0deg); 
+    }
+    100% {
+        transform: rotate(-3deg); 
+    }
+}
+
+@media (min-width: 800px){
+    #letra{
+        font-size: 20px;
+        font-family: 'Bubblegum Sans';
+    }
+
+    .img01 {
+        width: 350px;
+        height: auto;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+}/*cuando se hace chiquito xd*/
+@media (max-width: 760px){
+    #letra {
+        font-size: 20px;
+    }
+
+    .img01 {
+        width: 300px;
+        height: auto;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .EliminarParrafo {
+        font-size: 0;
+        display: none;
+    }
 }
