--- a/CSS/Estetica.css
+++ b/CSS/Estetica.css
@@ -1,10 +1,16 @@
 .Estetica{
 
   /*margin: 0 100px 100px 0;*/
-  margin-bottom: 100px;
+  margin-bottom: 150px;
+  margin-left: 80px;
   
   }
-  
+  .titilo-estetica{
+  text-align: center;
+    padding: 20px;
+    margin-bottom: 10px;
+  }
+
   .card-container {
       display: flex;
       flex-wrap: wrap;
@@ -76,15 +82,100 @@
     }
     
     .card-face.back p {
-      font-size: 16px;
+      font-size: 14px;
       text-align: justify;
+    }
+    .imagen-humor{
+      width: 150px;
+      height: 90px;
+      margin-left: 70px;
     }
     
     #imagenTarjetas{
       border-radius: 20px;
     }
+
+
+    @media screen and (max-width: 1190px) {
+      .Estetica {
+        display: flex;
+        justify-content: center;
+        
    
-   
+      }
+
+       .titilo-estetica{
+         text-align: center;
+         padding: 20px;
+        
+       }
+      .card-container {
+        margin: 10px;
+     
+      }
+      
+      .card{
+        width: 200px;
+        height: 250px;
+        perspective: 1000px;
+        position: relative;
+        margin: 0 60px 60px 0; 
+      }
+      .card,.card-face.back  {
+       
+        width: 100;
+        font-size: 5px;
+        
+       
+      }
+      .card-face.back p {
+        font-size: 10px;
+        text-align: justify;
+        width: fit-content;
+      }
+
+      .imagen-humor{
+       
+        margin-left: 20px;
+      }
+   /* .texto-estetica{
+       display: none;
+    }*/
+    }
     
 
-   
+   /* @media screen and (max-width: 480px) {
+      .card-container {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        margin: 10px auto;
+        width: 80%;
+        margin: 80px 0 0 10px;
+     
+      }
+      .card-container{
+        margin-top: 20px;
+        flex-wrap: nowrap;
+       
+        justify-content: space-around;
+       
+      
+         
+      }
+      .card,.card-face.back  {
+        width: 100%; /* Ajustar el ancho de las cartas en pantallas pequeñas */
+      /* margin: 0 60px 60px 0;
+        font-size: 5px;
+      }
+
+      .card {
+        width: 250px;
+        height: 250px;
+        perspective: 1000px;
+        position: relative;
+        margin: 0 10px 10px 0; /*]Espacis entre cada carta*/
+       
+     /* }
+      }*/
+
