Corregi el banner y la animacion de trama

--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -7,8 +7,7 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     font-family: "Slackey", sans-serif;
-    font-style: normal;
-    
+    font-style: normal;  
 }
 
 header {
@@ -26,8 +25,8 @@ header {
 }
 .banner {
     width: 100%;
-    height: 400px; /* Ajusta la altura  */
-    background-image: url("Imagenes/Header.jpeg"); /* URL de la imagen del banner */
+    height: 600px; /* Ajusta la altura  */
+    background-image: url("Imagenes/Cosmic\ Shake\ UHD.webp"); /* URL de la imagen del banner */
     background-size: cover; /* Ajustar la imagen al contenedor */
     background-position: center; /* Posicionar la imagen en el centro */
     display: flex;
