--- a/CSS/Footer.css
+++ b/CSS/Footer.css
@@ -1,10 +1,15 @@
-footer {
-    
-}
-.Pie{
-    border-color: black;
-    background-image: url("/CSS/Imagenes/FondodeBikiniUpscaledCut.png");
-    width: 200px;
-    height: 200px;
 
+.pie {
+    width: 100%;
+    height: 400px; /* Ajusta la altura  */
+    background-image: url("Imagenes/FondodeBikiniUpscaledCut.png"); /* URL de la imagen del banner */
+    background-size: cover; /* Ajustar la imagen al contenedor */
+    background-position: center; /* Posicionar la imagen en el centro */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    color: rgb(250, 244, 71); /* Color del texto del banner */
 }
+
