--- a/CSS/Footer.css
+++ b/CSS/Footer.css
@@ -1,5 +1,4 @@
-
-.pie {
+.pata {
     width: 100%;
     height: 400px; /* Ajusta la altura  */
     background-image: url("Imagenes/FondodeBikiniUpscaledCut.png"); /* URL de la imagen del banner */
