--- a/CSS/Footer.css
+++ b/CSS/Footer.css
@@ -1,14 +1,7 @@
 .pata {
     width: 100%;
-    height: 400px; /* Ajusta la altura  */
-    background-image: url("Imagenes/FondodeBikiniUpscaledCut.png"); /* URL de la imagen del banner */
+    height: 200px; /* Ajusta la altura  */
+    background-image: radial-gradient(at top, #5bf0c36f, #8a4fd35c); /* URL de la imagen del banner */
     background-size: cover; /* Ajustar la imagen al contenedor */
-    background-position: center; /* Posicionar la imagen en el centro */
     display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    text-align: center;
-    color: rgb(250, 244, 71); /* Color del texto del banner */
 }
-
