--- a/CSS/Footer.css
+++ b/CSS/Footer.css
@@ -26,7 +26,7 @@
 .logon{
     display: flex;
     justify-content: space-between;
-    
+    align-items: center;
     margin: 10 15px auto;
   }
   .creador{
@@ -39,6 +39,6 @@
     
   }
   .logogit{
-    align-items: center;
+    text-align: center; 
   }
 
