--- a/CSS/Impacto-Cultural.css
+++ b/CSS/Impacto-Cultural.css
@@ -50,7 +50,7 @@
 
 .Tituloreferencias
 {
-    min-height: 70px;
+    min-height: 80px;
     font-size: 40px;
     text-align: center;
     font-weight: 1000px;
@@ -92,26 +92,156 @@
     justify-content: space-between;
 }
 
-.imagen-PyF
-{
-    margin: 0px 80px;
-    text-align: center;
-}
-
-.imagen-F
-{
-    margin: 0px 35px;
-    text-align: center;
-}
-
-.imagen-Tlh
-{
-    margin: 0px 65px;
-    text-align: center;
-}
-
+.imagen-PyF,
+.imagen-F,
+.imagen-Tlh,
+.imagen-Tlh,
 .imagen-LS
 {
-    margin: 0px 40px;
-    text-align: center;
+    flex-grow: 1;
+        width:1px;
+        transform: scale(5.0);
+        margin-left: 10px;
+        margin-right: 10px;
+        text-align: center;
+}
+
+@media(min-width: 1000px){
+    .Impacto-cultural
+    {
+        border: 18px solid #6b6b6b9c; 
+        background-color: rgba(37, 158, 222, 0.216);
+        border-radius: 20px;
+        flex-direction: row;
+        margin: 15px;
+        padding: 20px;
+        width: auto;
+        font-size: 10px;
+        height: fit-content;
+        position: relative;
+    
+    }
+    .titulo-impactocultural
+    {
+        font-size: 100px;
+        position: relative;
+        top: 10%; 
+        left: 46%; 
+        transform: translate(-50%, -50%);
+        text-align: center;
+        margin: 10px 100px;
+        -webkit-text-stroke: 1.3px black;
+        color: #fdde00;
+        text-shadow:
+          -3px 3px 0 #000000,
+          1px 1px 0 #000000,
+          1px 2px 0 #000000,
+          1px 1px 0 #c3b11e,
+          1px 1px 0 #c3b11e;
+    }
+    
+    .Parrafos
+    {
+        display: flex;
+        justify-content: space-between;
+        
+    }
+    .primer-parrafo 
+    {
+        margin: 0px 40px;
+        text-align:justify;
+    }
+    .segundo-parrafo 
+    {
+        margin: 0px 40px;
+        text-align: justify;
+    }
+    
+    .Tituloreferencias
+    {
+        margin-top:60px;
+        font-size: 40px;
+        text-align: center;
+        font-weight: 1000px;
+        font-style: italic;
+        margin-bottom: 60px;
+        
+    }
+    .ContenedorReferencias
+    {
+        display: flex;
+        justify-content: space-between;
+    }
+    
+    .Phineasyferb
+    {
+        margin:0px 10px;
+        text-align: center;
+    }
+    
+    .Futurama
+    {
+        margin:0px 10px;
+        text-align: center;
+    }
+    
+    .TheLoudHouse
+    {
+        margin:0px 10px;
+        text-align: center;
+    }
+    
+    .LosSimpson
+    {
+        margin: 0px 10px;
+        text-align: center;
+    }
+    .Contenedorimagenes
+    {
+        display: flex;
+        justify-content: space-between;
+        margin:-10px;
+    }
+    
+    .imagen-PyF
+    {
+        flex-grow: 1;
+        width:1px;
+        transform: scale(0.5);
+        margin-left: 10px;
+        margin-right: 100px;
+        text-align: center;
+    }
+    
+    .imagen-F
+    {
+        flex-grow: 1;
+        width:1px;
+        transform: scale(0.5);
+        margin-left: 28px;
+        margin-right: 100px;
+        text-align: center;
+    }
+    
+    .imagen-Tlh
+    {
+        flex-grow: 1;
+        width:1px;
+        transform: scale(0.5);
+        margin-left: 28px;
+        margin-right: 100px;
+        text-align: center;
+    }
+    
+    .imagen-LS
+    {
+
+        flex-grow: 1;
+        width:1px;
+        transform: scale(0.5);
+        margin-left: 28px;
+        margin-right: 100px;
+        text-align: center;
+        
+    }
 }
