--- a/CSS/Footer.css
+++ b/CSS/Footer.css
@@ -29,14 +29,15 @@
 }
 .logotiponickel {
   width: auto;
-  height: 25px;
-  align-items: flex-end;
-  position: absolute;
-
+  height: 30px;
+  position: absolute; /* Absolute positioning for precise control */
+  bottom: 0; /* Places the image at the bottom of the container */
+  left: 50%; /* Centers the image horizontally (optional) */
+  bottom: 5px;
 }
 .logon{
   width: auto;
-  height: auto;
+  height: 100%;
   display: flex;
   margin-left: 10px;
   position: relative; 
@@ -51,3 +52,45 @@
   margin-bottom: 15px;
 }
 
+@media (min-width: 800px){
+  .pata {
+    width: 100%;
+    height: 600px; /* Ajusta la altura  */
+    background-image: radial-gradient(at top, #5bf0c3af, #8a4fd381); /* URL de la imagen del banner */
+    background-size: cover; /* Ajustar la imagen al contenedor */
+    display: flex;
+    margin: 10 15px auto;
+    display: flex;
+}
+.logon{
+  width: 0;
+  height: 0;
+  display: flex;
+  margin-left: 10px;
+  position: relative; 
+}
+  .contenedor-footer{
+      font-size: 20px;
+      font-family: 'Bubblegum Sans';
+  }
+  .contenedor-footer {
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    position: center;
+    padding: 20px;
+    margin-bottom: 8px;
+    margin-top: 8px;
+    justify-content: space-between; 
+    width: 100%;
+  
+  }
+
+  .logon {
+      width: 0;
+      height: 0;
+  }
+
+}/*cuando se hace chiquito xd*/
