--- a/CSS/Header.css
+++ b/CSS/Header.css
@@ -1,7 +1,4 @@
 /* General */
-
-
-
 header {
   
   padding: 0px 0;
@@ -11,7 +8,7 @@ header {
 }
 
 .espacio-header {
-  background-color:  #e6c335;
+  background-color:  #f7e840;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -21,6 +18,9 @@ header {
 }
 .espacio-header {
   transition: background-color 0.5s ease-in-out, height 0.5s ease-in-out, padding 0.5s ease-in-out;
+  background-image: url("/CSS/Imagenes/esponjatexture.png");
+  background-position: center;
+  background-size: contain;
 }
 
 /* Navegación */
@@ -38,7 +38,7 @@ nav li {
 
 nav a {
   text-decoration: none;
-  color: #333;
+  color: #151515;
   font-size: 16px;
 }
 
@@ -49,7 +49,7 @@ nav a {
 }
 
 .logo img {
-  max-width: 100px;
+  max-width: 120px;
   height: auto;
   transform: rotate(6deg);
 }
