--- a/CSS/Historia.css
+++ b/CSS/Historia.css
@@ -1,6 +1,8 @@
 .Historia{
     margin-top: 40px;
     margin-bottom: 50px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 .contenerhistoria {
     align-items: center;
