--- a/CSS/Header.css
+++ b/CSS/Header.css
@@ -74,5 +74,22 @@ nav a {
     margin: 10px 0;
   }
 }
+@media (min-width: 500px) {
+  .espacio-header {
+    flex-direction: column;
+    align-items: flex-start;
+  }
 
+  nav {
+    margin-bottom: 20px;
+  }
+
+  nav ul {
+    text-align: right;
+  }
+
+  nav li {
+    margin: 10px 0;
+  }
+}
 
