--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -74,11 +74,14 @@ p {
 }
 
 
-
+html{
+    scroll-behavior: smooth;
+}
 
 .html {
     box-sizing: border-box; /* NOS SIRVE PARA QUE NO HAYA EXTRA DE PANTALLA */
     font-size: 62.5%; /* AJUSTA LA LETRA DEPENDIENDO DEL ANCHO PERO AUN ASI HAY QUE AJUSTAR CADA SECCION  SI ES NECESARIO*/
+    scroll-behavior: smooth;
 }
 
 
