--- a/CSS/Header.css
+++ b/CSS/Header.css
@@ -11,7 +11,8 @@ header {
 }
 
 .espacio-header {
-  background-color:  #e6c335;
+background-color:  #e6c335;
+ 
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -38,7 +39,7 @@ nav li {
 
 nav a {
   text-decoration: none;
-  color: #333;
+  color: #0b0b0b;
   font-size: 16px;
 }
 
@@ -54,12 +55,26 @@ nav a {
   transform: rotate(6deg);
 }
 
+.espacio-header2{
+  display: none;
+}
 /* Responsive */
 
 @media (max-width: 768px) {
-  .espacio-header {
-    flex-direction: column;
-    align-items: flex-start;
+  .heder{
+ 
+    
+  }
+  .espacio-header{
+    display: none;
+  }
+  .espacio-header2 {
+    display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin: 0 15px auto;
+  height: 40px;
+  background-color: rgba(0, 0, 0, 0.5);
   }
 
   nav {
@@ -67,12 +82,35 @@ nav a {
   }
 
   nav ul {
-    text-align: right;
+    text-align: start;
+   
   }
 
   nav li {
-    margin: 10px 0;
+    
+    
+    margin-right: 5px;
   }
+  
+  
+  nav a {
+   
+    text-decoration: none;
+    color: #fdf8f8;
+    font-size: 10px;
+  }
+  
+  
+  .logo img {
+    position: fixed;
+  top: 4px; 
+  right: 5px; 
+   width: 20px;
+    height: auto;
+   
+   
+  }
+  
 }
 
 
