--- a/CSS/Historia.css
+++ b/CSS/Historia.css
@@ -1,6 +1,8 @@
 .Historia{
     margin-top: 40px;
     margin-bottom: 50px;
+    margin-left: 10px;
+    margin-right: 10px;
 }
 .contenerhistoria {
     align-items: center;
@@ -74,6 +76,7 @@
 }
 
 @media (max-width: 760px) {
+
     .contenerhistoria {
         flex-direction: column;
     }
@@ -84,7 +87,7 @@
         font-size: 0px;
     }
     .bobyc {
-        width: 350px;
+        width: 300px;
         height: auto;
         /* Ajustes para centrar la imagen en la primera columna */
         display: block;
