--- a/CSS/Header.css
+++ b/CSS/Header.css
@@ -5,6 +5,7 @@ header {
   font-family: "Slackey", sans-serif;
   font-weight: 400;
   font-style: normal;
+ 
 }
 
 .espacio-header {
@@ -45,13 +46,19 @@ nav a {
 /* Logo */
 
 .logo {
-  text-align: center;
+ 
+ 
 }
 
 .logo img {
-  max-width: 100px;
+    
+position: absolute;
+  top: 4px; 
+  right: 5px; 
+  width: 50px;
   height: auto;
   transform: rotate(6deg);
+  
 }
 
 .espacio-header2{
@@ -101,7 +108,7 @@ nav a {
   
   
   .logo img {
-    position: fixed;
+    position: absolute;
   top: 4px; 
   right: 5px; 
    width: 20px;
