--- a/CSS/Style.css
+++ b/CSS/Style.css
@@ -100,6 +100,10 @@ html{
         font-size: 80%; 
         
     }
+    .banner{
+        width: 100%;
+        height: 300px;  
+    }
 }
 
 @media (max-width: 480px) {
@@ -107,5 +111,6 @@ html{
     .body {
         font-size: 60%; 
     }
+    
 }
   
