--- a/CSS/Personajes.css
+++ b/CSS/Personajes.css
@@ -41,6 +41,7 @@
     min-width: 300px;
     height: 360px;
     background-color:rgba(19, 134, 198, 0.22);
+    transition: transform 200ms;
   }
   .div2  {
     flex: 1;
@@ -52,6 +53,7 @@
     min-width: 300px;
     height: 360px;
     background-color:rgba(253, 204, 57, 0.29);
+    transition: transform 200ms;
   }
   .div3  {
     flex: 1;
@@ -63,6 +65,7 @@
     min-width: 300px;
     height: 360px;
     background-color:rgba(255, 84, 95, 0.38);
+    transition: transform 200ms;
   }
   .div4  {
     flex: 1;
@@ -74,6 +77,7 @@
     min-width: 300px;
     height: 360px;
     background-color:rgba(65, 212, 28, 0.38);
+    transition: transform 200ms;
   }
   .div5  {
     flex: 1;
@@ -85,6 +89,7 @@
     min-width: 300px;
     height: 360px;
     background-color:rgba(249, 153, 9, 0.38);
+    transition: transform 200ms;
   }
   .div6  {
     flex: 1;
@@ -96,6 +101,7 @@
     min-width: 300px;
     height: 360px;
     background-color:rgba(115, 47, 168, 0.38);
+    transition: transform 200ms;
   }
   .div7  {
     flex: 1;
@@ -107,6 +113,7 @@
     min-width: 300px;
     height: 360px;;
     background-color:rgba(253, 204, 57, 0.29);
+    transition: transform 200ms;
   }
   .div8  {
     flex: 1;
@@ -118,6 +125,18 @@
     min-width: 300px;
     height: 360px;
     background-color:rgba(19, 134, 198, 0.4);
+    transition: transform 200ms;
+  }
+  .div1:hover,
+  .div2:hover,
+  .div3:hover,
+  .div4:hover,
+  .div5:hover,
+  .div6:hover,
+  .div7:hover,
+  .div8:hover
+  {
+  transform: scale(1.05);
   }
   .Bob  {
     flex: 1; 
